--- a/design.css
+++ b/design.css
@@ -13,17 +13,16 @@ h1 {
     font-size: 10px;
 }
 
-.button { 
-    border-radius: 10px;
+.button {
     background-color: burlywood;
-    color: white;
-    padding: 10px;
+    border-radius: 8px;
+    color: #ffffff;
+    padding: 5px;
     text-align: center;
-    text-decoration: none;
-    display: inline-table;
-    margin: 2px 1px;
-    cursor:pointer;
-    box-shadow: 0 1px 3px rgba(0,0,0,0,10), 0 1px 2px rgba(0,0,0,0,0.24);
+    font-size: 14px;
+    margin: 1px 1px;
+    cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 .button:hover{
@@ -33,8 +32,19 @@ h1 {
     background-color: bisque;
 }
 
+.row::after {
+    content: "";
+    clear: both;
+    display: block;
+}
+
+[class*="col-"]{
+    float: left;
+    padding: 15px;
+}
+
 .col-1  {width: 8.33%}
-.col-2  {width: 16.66%}
+.col-2  {width: 17.66%}
 .col-3  {width: 25%}
 .col-4  {width: 33.33%}
 .col-5  {width: 41.66%}
@@ -46,10 +56,6 @@ h1 {
 .col-11 {width: 91.66%}
 .col-12 {width: 100%}
 
-[class*="col-"]{
-    float: center;
-    padding: 15px;
-}
 
 @media only screen and (max-width:768px){
     /* for phones */
@@ -58,8 +64,3 @@ h1 {
     }
 }
 
-.row::after{
-    content: "";
-    clear: both;
-    display: table;
-}
