--- a/design.css
+++ b/design.css
@@ -4,12 +4,13 @@
 body {
 background-color: white;
 align-content: center;
+font-family: "Century Gothic";
 }
 
 h1 {
     text-align: center;
     align-content: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Century Gothic";
     font-size: 10px;
 }
 
@@ -19,7 +20,7 @@ h1 {
     color: #ffffff;
     padding: 5px;
     text-align: center;
-    font-size: 14px;
+    font-size: 25px;
     margin: 1px 1px;
     cursor: pointer;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -64,3 +65,16 @@ h1 {
     }
 }
 
+.hero-text {
+    font-size: 40px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: grey;
+}
+.icon{
+    width: 250px;
+    height: 250px;
+}
